@B                |  .'    |  |    |  |   |  .-.  | |  |___ |  | |  .-.  |
@B                |.'      |_.'    |_.'   |_.' |_.' |____.' |_.' |_.' |_.'@n
@B __________________________________________________________[@W Novidades @B]_______@n

@n
@C-@G=@Y>@W XX de YYYY de 2025 @C@Y<@G=@C-@n
   
   @GThewster@n agora está disponivel para ser cidade natal na criação.
   Agora é possivel anternar entre Adagio e Allegro sem esperar acabar.
   Sistema de magias reescrito e melhorado.
   Corrido bug que permitia certas canções de bardo dar dano em vez de curar.
   Alguns arquivos de Ajuda foram revisados e corrigidos.
   Adicionadas entradas para @RHELP RESISTENCIAS@n, @BCEU@n e muitas outras.
   Nova habilidade @YBows@n, permite atirar com arcos.
   @YWindwall@n para @RRangers@n forma uma barreira de vento que protege durante a luta.
   @YCreate Food@n para @RDruidas@n e @RRangers@n renomeado para @YCreate Berries@n.
   Atualização do sistema interno do mundo para a versão mais recente.
   O Mundo de Vitália agora conta com uma nova classe de personagem, @RRanger@n.
   Novos tipos de item (@GPlanta@n, @GMobilia@n, @GMunição@n e @GArcos@n).
   Os jogadores podem sentar, descansar e deitar nas mobilias.
   É possivel beber direto em algumas salas.
   Mais opções no toggle/prefedit.
   Canais mudado para prefedit (editor de preferencias).
   Adicionado historico para canais de comunicação.
   É possível olhar para o céu e ver a posição do sol, lua e estrelas.
   Look around tambêm pode dar mais informações das salas.
   Sistema de grupos modificado, agora mostra lista de grupos @Gabertos@n e @Rfechados@n para novos membros e em qual área está o líder.
   Who mostra separado personagens até nível 10.
   Sistema de Happyhour com bonus de ouro e xp.
   Where mostra o nome da área.
   Comando sacrifice para sacrificar corpos e objetos. 
   Dex agora influencia na hora do primeiro hit.
   Carisma agora influencia a possibilidade de ser atacado por mobs agressivos.